syntax = "proto3";

package ucs.v2;

import "compositepayment.proto";

option go_package = "github.com/juspay/connector-service/backend/grpc-api-types/proto;proto";

// Service for composite payment operations.
service CompositePaymentService {
  // Runs composite authorize flow.
  rpc CompositeAuthorize(CompositeAuthorizeRequest) returns (CompositeAuthorizeResponse);
}
